[package]
name = "free-storage"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.1", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.9.1"
free-storage = "1.0"
tokio = { version = "1.22" }
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
